[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "pallet-bridge-grandpa"
version = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", version = "3.1", default-features = false }
finality-grandpa = { version = "0.16", default-features = false }
num-traits       = { version = "0.2", default-features = false }
scale-info       = { version = "2.1", default-features = false, features = ["derive"] }
serde            = { version = "1.0", optional = true }
# darwinia-network
bp-header-chain = { default-features = false, path = "../../primitives/header-chain" }
bp-runtime      = { default-features = false, path = "../../primitives/runtime" }
bp-test-utils   = { optional = true, default-features = false, path = "../../primitives/test-utils" }
# paritytech
frame-benchmarking  = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-support       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-system        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-finality-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime          = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-trie             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[dev-dependencies]
# paritytech
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"finality-grandpa/std",
	"num-traits/std",
	"scale-info/std",
	"serde",
	# darwinia-network
	"bp-header-chain/std",
	"bp-runtime/std",
	"bp-test-utils/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]

runtime-benchmarks = [
	"bp-test-utils",
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
