[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "pallet-bridge-grandpa"
version = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", workspace = true }
finality-grandpa = { workspace = true }
num-traits       = { workspace = true }
scale-info       = { workspace = true }
serde            = { optional = true, workspace = true }

# darwinia-network
bp-header-chain = { workspace = true }
bp-runtime      = { workspace = true }
bp-test-utils   = { optional = true, workspace = true }

# paritytech
frame-benchmarking  = { optional = true, workspace = true }
frame-support       = { workspace = true }
frame-system        = { workspace = true }
sp-finality-grandpa = { workspace = true }
sp-runtime          = { workspace = true }
sp-std              = { workspace = true }
sp-trie             = { workspace = true }

[dev-dependencies]
# paritytech
sp-core = { workspace = true }
sp-io   = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"finality-grandpa/std",
	"num-traits/std",
	"scale-info/std",
	"serde",

	# darwinia-network
	"bp-header-chain/std",
	"bp-runtime/std",
	"bp-test-utils/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]

runtime-benchmarks = [
	"bp-test-utils",
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
