[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "pallet-bridge-grandpa"
version = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", workspace = true }
finality-grandpa = { workspace = true }
num-traits       = { workspace = true }
scale-info       = { workspace = true }
serde            = { workspace = true, optional = true }

# darwinia-messages-substrate
bp-header-chain = { workspace = true }
bp-runtime      = { workspace = true }
bp-test-utils   = { workspace = true, optional = true }

# substrate
frame-benchmarking   = { workspace = true, optional = true }
frame-support        = { workspace = true }
frame-system         = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-runtime           = { workspace = true }
sp-std               = { workspace = true }
sp-trie              = { workspace = true }

[dev-dependencies]
# substrate
sp-core = { workspace = true, features = ["std"] }
sp-io   = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"finality-grandpa/std",
	"num-traits/std",
	"scale-info/std",
	"serde",

	# darwinia-messages-substrate
	"bp-header-chain/std",
	"bp-runtime/std",
	"bp-test-utils/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"sp-consensus-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]

runtime-benchmarks = [
	# darwinia-messages-substrate
	"bp-test-utils",

	# substrate
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = [
	# substrate
	"frame-support/try-runtime",
]
