[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Module that allows bridged chains to exchange messages using lane concept."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-messages"
version     = "0.1.0"

[dependencies]
# crates.io
bitvec     = { version = "1", default-features = false, features = ["alloc"] }
codec      = { package = "parity-scale-codec", workspace = true }
num-traits = { version = "0.2", default-features = false }
scale-info = { workspace = true }
serde      = { workspace = true, optional = true, features = ["derive"] }

# darwinia-network
bp-message-dispatch = { workspace = true }
bp-messages         = { workspace = true }
bp-runtime          = { workspace = true }

# paritytech
frame-benchmarking = { optional = true, workspace = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-core            = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
# darwinia-network
bp-test-utils = { workspace = true }
# paritytech
pallet-balances = { workspace = true, features = ["std"] }
sp-io           = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"num-traits/std",
	"scale-info/std",
	"serde",

	# darwinia-network
	"bp-message-dispatch/std",
	"bp-messages/std",
	"bp-runtime/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
