[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Module that allows bridged chains to exchange messages using lane concept."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-messages"
version     = "0.1.0"

[dependencies]
# crates.io
bitvec     = { workspace = true }
codec      = { package = "parity-scale-codec", workspace = true }
num-traits = { workspace = true }
scale-info = { workspace = true }

# darwinia-network
bp-messages         = { workspace = true }
bp-runtime          = { workspace = true }

# paritytech
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-core            = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
# darwinia-network
bp-test-utils = { workspace = true }
# paritytech
pallet-balances = { workspace = true, features = ["std"] }
sp-io           = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"num-traits/std",
	"scale-info/std",

	# darwinia-network
	"bp-messages/std",
	"bp-runtime/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
