[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Module that allows bridged chains to exchange messages using lane concept."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-messages"
version     = "0.1.0"

[dependencies]
# crates.io
bitvec     = { workspace = true }
codec      = { package = "parity-scale-codec", workspace = true }
num-traits = { workspace = true }
scale-info = { workspace = true }
serde      = { workspace = true, optional = true, features = ["derive"] }

# darwinia-messages-substrate
bp-message-dispatch = { workspace = true }
bp-messages         = { workspace = true }
bp-runtime          = { workspace = true }

# substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-core            = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
# darwinia-messages-substrate
bp-test-utils = { workspace = true, features = ["std"] }

# substrate
pallet-balances = { workspace = true, features = ["std"] }
sp-io           = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"num-traits/std",
	"scale-info/std",
	"serde",

	# darwinia-messages-substrate
	"bp-message-dispatch/std",
	"bp-messages/std",
	"bp-runtime/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# substrate optional
	"frame-benchmarking?/std",
]

runtime-benchmarks = [
	# substrate
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = [
	# substrate
	"frame-support/try-runtime",
]
