[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "pallet-bridge-parachains"
version = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.1", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
serde      = { version = "1.0.101", optional = true }
# darwinia-network
bp-parachains         = { default-features = false, path = "../../primitives/parachains" }
bp-polkadot-core      = { default-features = false, path = "../../primitives/polkadot-core" }
bp-runtime            = { default-features = false, path = "../../primitives/runtime" }
pallet-bridge-grandpa = { default-features = false, path = "../grandpa" }
# paritytech
frame-benchmarking = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-support      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-system       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-std             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-trie            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[dev-dependencies]
# darwinia-network
bp-header-chain = { path = "../../primitives/header-chain" }
bp-test-utils   = { path = "../../primitives/test-utils" }
# paritytech
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",
	# darwinia-network
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"pallet-bridge-grandpa/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
