[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "pallet-bridge-parachains"
version = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# darwinia-network
bp-header-chain       = { workspace = true }
bp-parachains         = { workspace = true }
bp-polkadot-core      = { workspace = true }
bp-runtime            = { workspace = true }
pallet-bridge-grandpa = { workspace = true }

# paritytech
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
sp-trie            = { workspace = true }

[dev-dependencies]
# darwinia-network
bp-header-chain = { workspace = true }
bp-test-utils   = { workspace = true }

# paritytech
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# darwinia-network
	"bp-header-chain/std",
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-bridge-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
