[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "pallet-bridge-parachains"
version = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
log        = { workspace = true }
scale-info = { workspace = true }
serde      = { workspace = true, optional = true }

# darwinia-messages-substrate
bp-parachains         = { workspace = true }
bp-polkadot-core      = { workspace = true }
bp-runtime            = { workspace = true }
pallet-bridge-grandpa = { workspace = true }

# substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-core            = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
sp-trie            = { workspace = true }

[dev-dependencies]
# darwinia-messages-substrate
bp-header-chain = { workspace = true, features = ["std"] }
bp-test-utils   = { workspace = true, features = ["std"] }

# substrate
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",

	# darwinia-messages-substrate
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"pallet-bridge-grandpa/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	# substrate optional
	"frame-benchmarking?/std",
]

runtime-benchmarks = [
	# substrate
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = [
	# substrate
	"frame-support/try-runtime",
]
