[package]
name = "pallet-bridge-relayers"
description = "Module used to store relayer rewards and coordinate relayers set."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
log        = { workspace = true, default-features = false }
scale-info = { workspace = true }

# darwinia
bp-messages            = { workspace = true, default-features = false }
bp-relayers            = { workspace = true, default-features = false }
pallet-bridge-messages = { workspace = true, default-features = false }

# paritytech
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support      = { workspace = true, default-features = false }
frame-system       = { workspace = true, default-features = false }
sp-arithmetic      = { workspace = true, default-features = false }
sp-runtime         = { workspace = true, default-features = false }
sp-std             = { workspace = true, default-features = false }

[dev-dependencies]
bp-runtime      = { workspace = true }
pallet-balances = { workspace = true }
sp-core         = { workspace = true }
sp-io           = { workspace = true }
sp-runtime      = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-relayers/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-bridge-messages/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]