[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A Substrate Runtime module that selects 2/3 of initial validators for every session"
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-shift-session-manager"
version     = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }

# Substrate Dependencies

frame-support  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }
frame-system   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }
pallet-session = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }
sp-staking     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }
sp-std         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }

[dev-dependencies]
sp-core    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"sp-staking/std",
	"sp-std/std",
]
