[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "An Substrate pallet that allows parties on different chains (bridged using messages pallet) to swap their tokens"
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-token-swap"
version     = "0.1.0"

[dependencies]
codec      = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
log        = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde      = { version = "1.0", optional = true }

# Bridge dependencies

bp-message-dispatch    = { path = "../../primitives/message-dispatch", default-features = false }
bp-messages            = { path = "../../primitives/messages", default-features = false }
bp-runtime             = { path = "../../primitives/runtime", default-features = false }
bp-token-swap          = { path = "../../primitives/token-swap", default-features = false }
pallet-bridge-dispatch = { path = "../dispatch", default-features = false }
pallet-bridge-messages = { path = "../messages", default-features = false }

# Substrate Dependencies

frame-benchmarking = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false, optional = true }
frame-support      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false }
frame-system       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false }
sp-core            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false }
sp-io              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false }
sp-runtime         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false }
sp-std             = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
]
std = [
	"codec/std",
	"bp-message-dispatch/std",
	"bp-messages/std",
	"bp-runtime/std",
	"bp-token-swap/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-messages/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
