[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Primitives of Darwinia runtime."
edition     = "2021"
license     = "GPL-3.0"
name        = "bp-darwinia"
version     = "0.1.0"

[dependencies]
# darwinia-network
bp-darwinia-core = { default-features = false, path = "../darwinia-core" }
# paritytech
bp-messages   = { default-features = false, path = "../messages" }
bp-runtime    = { default-features = false, path = "../runtime" }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-api        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-version    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[features]
default = ["std"]
std = [
	# darwinia-network
	"bp-darwinia-core/std",
	# paritytech
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
]
