[package]
name = "bp-moonbase"
description = "Primitives of Moonbase runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
smallvec = "1.7"

# Bridge Dependencies

bp-messages      = { default-features = false, path = "../messages" }
bp-polkadot-core = { default-features = false, path = "../polkadot-core" }
bp-runtime       = { default-features = false, path = "../runtime" }

# Substrate Based Dependencies

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
]
