[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of Polkadot runtime."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-polkadot"
version     = "0.1.0"

[dependencies]

# Bridge Dependencies
bp-messages      = { path = "../messages", default-features = false }
bp-polkadot-core = { path = "../polkadot-core", default-features = false }
bp-runtime       = { path = "../runtime", default-features = false }

# Substrate Based Dependencies

sp-api = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.2", default-features = false }
sp-std = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.2", default-features = false }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"sp-api/std",
	"sp-std/std",
]
