[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of currency exchange module."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-currency-exchange"
version     = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }
sp-api        = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }
sp-std        = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-std/std",
]
