[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Primitives of Darwinia-like runtime."
edition     = "2021"
license     = "GPL-3.0"
name        = "bp-darwinia-core"
version     = "0.1.0"

[dependencies]
# crates.io
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info         = { version = "2.0.1", default-features = false, features = ["derive"] }
# moonbeam
account = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.36" }
# paritytech
bp-messages   = { default-features = false, path = "../messages" }
bp-runtime    = { default-features = false, path = "../runtime" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# crates.io
	"parity-scale-codec/std",
	"scale-info/std",
	# moonbeam
	"account/std",
	# paritytech
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
