[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Primitives of Darwinia-like runtime."
edition     = "2021"
license     = "GPL-3.0"
name        = "bp-darwinia-core"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# frontier
fp-account = { workspace = true }

# substrate
bp-messages   = { workspace = true }
bp-runtime    = { workspace = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-core       = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# frontier
	"fp-account/std",

	# substrate
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
