[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A common interface for describing what a bridge pallet should be able to do."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-header-chain"
version     = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", version = "3.1", default-features = false }
finality-grandpa = { version = "0.16", default-features = false }
scale-info       = { version = "2.1", default-features = false, features = ["derive"] }
serde            = { version = "1.0", optional = true }
# darwinia-network
bp-runtime = { default-features = false, path = "../runtime" }
# paritytech
frame-support       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-finality-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime          = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
# crates.io
array-bytes    = { version = "4.1" }
assert_matches = { version = "1.5" }
bp-test-utils  = { path = "../test-utils" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"finality-grandpa/std",
	"scale-info/std",
	"serde/std",
	# darwinia-network
	"bp-runtime/std",
	# paritytech
	"frame-support/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
]
