[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A common interface for describing what a bridge pallet should be able to do."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-header-chain"
version     = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", workspace = true }
finality-grandpa = { workspace = true }
scale-info       = { workspace = true }
serde            = { workspace = true, optional = true }

# darwinia-network
bp-runtime = { workspace = true }

# paritytech
frame-support       = { workspace = true }
sp-core             = { workspace = true }
sp-finality-grandpa = { workspace = true }
sp-runtime          = { workspace = true }
sp-std              = { workspace = true }
sp-trie             = { workspace = true }

[dev-dependencies]
# crates.io
array-bytes    = { workspace = true }
assert_matches = { version = "1.5" }
bp-test-utils  = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"finality-grandpa/std",
	"scale-info/std",
	"serde/std",

	# darwinia-network
	"bp-runtime/std",
	
	# paritytech
	"frame-support/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
