[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A common interface for describing what a bridge pallet should be able to do."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-header-chain"
version     = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", workspace = true }
finality-grandpa = { workspace = true }
scale-info       = { workspace = true }
serde            = { workspace = true, optional = true }

# darwinia-messages-substrate
bp-runtime = { workspace = true }

# substrate
frame-support        = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core              = { workspace = true }
sp-runtime           = { workspace = true }
sp-std               = { workspace = true }

[dev-dependencies]
# crates.io
array-bytes    = { workspace = true }
assert_matches = { version = "1.5" }

# substrate
bp-test-utils = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"finality-grandpa/std",
	"scale-info/std",
	"serde/std",

	# darwinia-messages-substrate
	"bp-runtime/std",

	# substrate
	"frame-support/std",
	"sp-core/std",
	"sp-consensus-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
]
