[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of bridge messages dispatch modules."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-message-dispatch"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.1", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
# darwinia-network
bp-runtime = { default-features = false, path = "../runtime" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# darwinia-network
	"bp-runtime/std",
	# paritytech
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]
