[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of bridge messages dispatch modules."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-message-dispatch"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# darwinia-network
bp-runtime = { workspace = true }

# paritytech
frame-support = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# darwinia-network
	"bp-runtime/std",
	
	# paritytech
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]
