[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of messages module."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-messages"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true, features = ["bit-vec"] }
scale-info = { workspace = true, features = ["bit-vec"] }
serde      = { workspace = true, optional = true }

# darwinia-network
bp-runtime = { workspace = true }

# paritytech
frame-support = { workspace = true }
sp-core       = { workspace = true }
sp-std        = { workspace = true }

[dev-dependencies]
hex         = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",

	# darwinia-network
	"bp-runtime/std",

	# paritytech
	"frame-support/std",
	"sp-core/std",
	"sp-std/std",
]
